funcionalidad de boton de menu y esconder sing button

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,44 @@
 
+/* font-family: 'Poppins', sans-serif; */
+body{
+    font-family: 'Poppins';
+    font-weight: 700;
+}
+
+.menuLogo{
+    display: flex;
+    justify-content: space-between;
+}
+.transparentButton{
+    background-color: transparent;
+    border: 0px;
+}
 .menuMorado{
+    margin-top: 10px;
     height:0px;
     background-color:#3A3053; 
     color:#ffffff;
     border-radius: 10px;
-    transition: 3.0s ease-in-out;
+    justify-content: space-between;
+}
+ul{
+    list-style:none;
+    padding: 0px;
+    text-align: center;
+}
+li{
+    margin:20px;
+}
+.customButton{
+    color: white !important;
+    background-color: hsl(180, 66%, 49%);
+    border: none;
+    border-radius: 25px;
+    width: 90%;
+    height: 50px;
+    padding: 0px;
+    font-family: 'Poppins';
+    font-weight: 700;
+    font-size: 16px;
+    display: none;
 }
