seccion 3 placeholder y btn

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,13 +2,15 @@
 /* font-family: 'Poppins', sans-serif; */
 :root{
     --light-gray: hsl(0, 0%, 75%);
+    --blue-btn: hsl(180, 66%, 49%);
+    --purple-bg: hsl(257, 27%, 26%);
+    --purple-title:hsl(260, 8%, 14%);
 }
 
 body{
     font-family: 'Poppins';
     font-weight: 700;
 }
-
 .menu-logo{
     display: flex;
     justify-content: space-between;
@@ -20,7 +22,7 @@ body{
 .menu-morado{
     margin-top: 10px;
     height:0px;
-    background-color:#3A3053; 
+    background-color:var(--purple-bg); 
     color:#ffffff;
     border-radius: 10px;
     justify-content: space-between;
@@ -35,7 +37,7 @@ li{
 }
 .custom-button{
     color: white !important;
-    background-color: hsl(180, 66%, 49%);
+    background-color: var(--blue-btn);
     border: none;
     border-radius: 25px;
     width: 90%;
@@ -57,7 +59,7 @@ h2{
     font-weight: 700;
     font-size: 45px;
     text-align: center;
-    color: #36333E;
+    color: var(--purple-title);
     line-height: 60px;
 }
 
@@ -71,7 +73,7 @@ h2{
 
 .gs-btn{
     color: white !important;
-    background-color: hsl(180, 66%, 49%);
+    background-color: var(--blue-btn);
     border: none;
     border-radius: 25px;
     width: 50%;
@@ -81,16 +83,45 @@ h2{
     font-weight: 700;
     font-size: 18px;
 }
-
-.gs-btn-div{
+.div-center{
     display: flex;
     justify-content: center;
+}
+.gs-btn-div{
     align-content: center;
+    padding:5%;
+}
+.shrtn-link-sec{
+    background-image: url(../images/bg-shorten-mobile.svg);
+    background-repeat: no-repeat;
+    background-position-x: right;
+    background-color: #3A3053;
+    width: 90%;
+    border-radius: 10px;
+}
+.bicolor-background{
+    /* background-size: 50%; 
+    background-color: #F0F1F6; */
+}
+.input-shrtn-link{
+    height: 50px;
+    width:90%;
+    border-radius: 10px;
+    font-family: 'Poppins';
+    color: var(--light-gray);
+    border:none;
+    font-size: 16px;
 }
 
-.shrtn-link-sec{
-    background-image: url(../img/bg-shorten-mobile.svg)
-    background-color: #3A3053;
-    width: ;
-    height: ;
+.btn-short-it{
+    background-color: #2acfcf;
+    font-family: 'Poppins';
+    font-weight: 700;
+    font-size: 18px;     
+    color: white;
+    border: none;
+    border-radius: 10px;
+    width: 90%;
+    height: 50px;
 }
+
